# 1tracker_pi

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Plugin.cmake  README.md  config.h.in  plugin.xml.in  requirements.md  vcpkg.json
.circleci/: config.yml
.github/workflows/: build-and-publish.yml
build-deps/: control
ci/: appveyor.bat  circleci-build-macos.sh  cleanup-old-versions.sh  update-catalog.sh
cmake/: AndroidLibs.cmake  PluginLocalization.cmake  Targets.cmake  plugin-android.ver
cmake/in-files/: plugin.xml.in  plugin_metadata.h.in  version.h.in
config/: 1tracker.example.json
docs/: README.md  adding-endpoint-types.md  design.md  installatie.md  installation.md  release-toolbar-icons.md  todo.md
flatpak/: org.opencpn.OpenCPN.Plugin.1tracker.yaml  org.opencpn.OpenCPN.Plugin.onetracker.yaml
include/1tracker_pi/: config_loader.h  endpoint_config.h  endpoint_error_summary.h  endpoint_policy.h  endpoint_sender.h  endpoint_type_behavior.h  endpoint_ui_state.h  nfl_settings.h  payload_builder.h  runtime_config.h  scheduler.h  snapshot.h  state_store.h  translation_markers.h
libs/onetracker_core/: CMakeLists.txt
po/: 1tracker_pi.pot  POTFILES.in  ar_SA.po  bg_BG.po  ca_ES.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  en_GB.po  es_ES.po  et_EE.po  fi_FI.po  fil_PH.po  fr_FR.po  gl_ES.po  he_IL.po  hi_IN.po  hu_HU.po  id_ID.po  is_IS.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb_NO.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sv_SE.po  th_TH.po  tr_TR.po  vi_VN.po  zh_CN.po  zh_TW.po
scripts/: restart_opencpn_dev.sh  top_routines.sh
src/: config_loader.cpp  crash_guard.cpp  endpoint_editor_page.h  endpoint_error_summary.cpp  endpoint_policy.cpp  endpoint_sender.cpp  endpoint_type_picker.cpp  endpoint_type_picker.h  endpoint_type_registry.cpp  http_json_endpoint_page.cpp  http_json_endpoint_page.h  nfl_endpoint_page.cpp  nfl_endpoint_page.h  payload_builder.cpp  plugin.cpp  plugin.h  plugin_ui_utils.cpp  plugin_ui_utils.h  scheduler.cpp  state_store.cpp  tracker_dialog.cpp  tracker_dialog.h
test/: CMakeLists.txt  test_config_loader.cpp  test_endpoint_error_summary.cpp  test_endpoint_identity.cpp  test_endpoint_sender.cpp  test_endpoint_type_behavior.cpp  test_payload_builder.cpp  test_scheduler.cpp  test_secret_masking.cpp  test_state_store.cpp
